Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-36675

Optimizer hints parser catches irrelevant `thd->is_error()` set by multi-RENAME TABLE

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • None
    • 12.0.1
    • Optimizer
    • None

    Description

      This task is split from MDEV-36484 and proposes an alternative solution to the same problem. The test is the same:

      CREATE TABLE t1 (a INT);
      CREATE TRIGGER t1 AFTER INSERT ON t1 FOR EACH ROW INSERT INTO t1 VALUES (0);
      RENAME TABLE t1 TO c,v2 TO t;
      

      The description of the problem can be found in MDEV-36484 as well. In short: optimizer hints parser is sensitive to `thd->is_error()` set elsewhere. That behavior must be changed so it is only catches its own fatal errors

      Attachments

        Issue Links

          Activity

            People

              oleg.smirnov Oleg Smirnov
              oleg.smirnov Oleg Smirnov
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d 2h 20m
                  1d 2h 20m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.