MDEV-36675 Optimizer hints parser catches irrelevant `thd->is_error()` set by multi-RENAME TABLE

Optimizer hints parser analyzes `thd->is_error()` flag to detect a fatal
error occured during hints processing. However, this criteria is not
reliable and considered a bad practice.
This commit replaces the criteria with the parser's own `is_fatal_error()`
flag which is related strictly to hints parsing and not something else